[package]
name = "array2d"
version = "0.2.1"
authors = ["Harrison McCullough <mccullough.harrison@gmail.com>"]
edition = "2018"
description = "A fixed sized two-dimensional array"
readme = "README.md"
license = "MIT"
repository = "https://github.com/HarrisonMc555/array2d"

[dependencies]
serde_sgx = { package = "serde", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"], optional = true }
